@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.yahoo.maha</groupId>
         <artifactId>maha-parent</artifactId>
-        <version>5.180-SNAPSHOT</version>
+        <version>5.183-SNAPSHOT</version>
     </parent>
 
 
@@ -115,7 +115,7 @@
                 <configuration>
                     <forkCount>7</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.library.path=/home/y/lib64 ${surefireArgLine}</argLine>
+                    <argLine>-Xmx2048m -Djava.library.path=/home/y/lib64 ${surefireArgLine}</argLine>
                     <workingDirectory>target/FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
